k8s/Ingress/Raw/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: tariff-plan-app
  labels:
    app: mongo-express-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-app
  template:
    metadata:
      labels:
        app: mongo-express-app
    spec:
      containers:
      - name: mongo-express-container
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: tariff-plan-app
spec:
  selector:
    app: mongo-express-app
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 32001
