k8s/Ingress/Raw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tariff-plan-ingress
  namespace: tariff-plan-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: sv-test.ach
    http:
      paths:
        - path: /main/(.*)
          pathType: Prefix  
          backend:
            service:
              name: gateway-api-service
              port:
                number: 20000
